--- a/source/tests/external/CMakeLists.txt
+++ b/source/tests/external/CMakeLists.txt
@@ -8,6 +8,12 @@ if(NOT TIMEMORY_BUILD_TESTING)
     set(_EXCLUDE EXCLUDE_FROM_ALL)
 endif()
 
+add_executable(socket-server ${_EXCLUDE} server.cpp)
+add_executable(socket-client ${_EXCLUDE} client.cpp)
+
+target_link_libraries(socket-server PRIVATE timemory::timemory-headers ${_LINK})
+target_link_libraries(socket-client PRIVATE timemory::timemory-headers ${_LINK})
+
 add_library(extern-test-templates ${_EXCLUDE} SHARED
     extern_templates.cpp)
 
@@ -20,12 +26,12 @@ target_link_libraries(extern-test-templates PUBLIC
 add_library(gotcha-tests-lib ${_EXCLUDE} SHARED
     gotcha_tests_lib.hpp
     gotcha_tests_lib.cpp)
-  
+
 target_link_libraries(gotcha-tests-lib PUBLIC
     timemory::timemory-compile-options
     timemory::timemory-vector
     timemory::timemory-core)
-  
+
 target_include_directories(gotcha-tests-lib PUBLIC
     ${CMAKE_CURRENT_LIST_DIR})
 
