--- a/.travis.yml
+++ b/.travis.yml
@@ -74,7 +74,7 @@ matrix:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - MATRIX_EVAL="CC=$(which gcc-8) && CXX=$(which g++-8) && BUILD_ARGS='--build-libs static --mpi --python --lto --stats --gotcha --arch --cxx-standard=17'"
+        - MATRIX_EVAL="CC=$(which gcc-8) && CXX=$(which g++-8) && BUILD_ARGS='--build-libs static --mpi --lto --stats --gotcha --arch --cxx-standard=17'"
     # Clang 5.0
     - os: linux
       dist: xenial
@@ -115,7 +115,7 @@ matrix:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - MATRIX_EVAL="CC=$(which clang-7) && CXX=$(which clang++-7) && BUILD_ARGS='--quick --build-libs static --caliper --mpi --papi --ompt --stats --tools --lto --cxx-standard=14'"
+        - MATRIX_EVAL="CC=$(which clang-7) && CXX=$(which clang++-7) && BUILD_ARGS='--quick --build-libs static --caliper --mpi --papi --ompt --stats --tools --cxx-standard=14'"
     # ------------------------------------------------------------------------ #
     #
     #   Python 3.7
