Fix for CMP0077 in ex-ert

--- a/examples/ex-ert/CMakeLists.txt
+++ b/examples/ex-ert/CMakeLists.txt
@@ -16,7 +16,9 @@ if("${CMAKE_PROJECT_NAME}" STREQUAL "timemory")
     get_property(LANGUAGES GLOBAL PROPERTY ENABLED_LANGUAGES)
     if(NOT "CUDA" IN_LIST LANGUAGES OR NOT CMAKE_CUDA_COMPILER OR NOT TIMEMORY_USE_CUDA)
         set(_USE_CUDA OFF)
-        set(USE_CUDA OFF)
+        if(DEFINED USE_CUDA)
+            set(USE_CUDA OFF)
+        endif()
     endif()
 endif()
 
