Disable ERT example when building with LTO in CI

--- a/examples/ex-ert/CMakeLists.txt
+++ b/examples/ex-ert/CMakeLists.txt
@@ -13,6 +13,9 @@ if("${CMAKE_PROJECT_NAME}" STREQUAL "timemory")
     if(DEFINED BUILD_ERT AND NOT BUILD_ERT)
         return()
     endif()
+    if("$ENV{CI}" STREQUAL "true" AND TIMEMORY_BUILD_LTO)
+        return()
+    endif()
     get_property(LANGUAGES GLOBAL PROPERTY ENABLED_LANGUAGES)
     if(NOT "CUDA" IN_LIST LANGUAGES OR NOT CMAKE_CUDA_COMPILER OR NOT TIMEMORY_USE_CUDA)
         set(_USE_CUDA OFF)
