--- a/examples/ex-cpu-roofline/CMakeLists.txt
+++ b/examples/ex-cpu-roofline/CMakeLists.txt
@@ -12,6 +12,9 @@ set(COMPONENTS compile-options analysis-tools cpu-roofline ert component)
 
 find_package(timemory REQUIRED COMPONENTS ${COMPONENTS} OPTIONAL_COMPONENTS mpi)
 
+# this tend to cause the CI to exceed the time-limit
+set(CMAKE_INTERPROCEDURAL_OPTIMIZATION OFF)
+
 add_library(cpu-fp-single INTERFACE)
 add_library(cpu-fp-double INTERFACE)
 
