--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,8 @@ string(REPLACE "." ";" VERSION_LIST "${VERSION_STRING}")
 LIST(GET VERSION_LIST 0 TIMEMORY_VERSION_MAJOR)
 LIST(GET VERSION_LIST 1 TIMEMORY_VERSION_MINOR)
 LIST(GET VERSION_LIST 2 TIMEMORY_VERSION_PATCH)
+set(TIMEMORY_VERSION
+    "${TIMEMORY_VERSION_MAJOR}.${TIMEMORY_VERSION_MINOR}.${TIMEMORY_VERSION_PATCH}")
 
 math(EXPR TIMEMORY_VERSION_CODE
     "${TIMEMORY_VERSION_MAJOR} * 10000 + ${TIMEMORY_VERSION_MINOR} * 100 + ${TIMEMORY_VERSION_PATCH}")
