--- a/source/tools/kokkos-connector/kp_timemory.cpp.in
+++ b/source/tools/kokkos-connector/kp_timemory.cpp.in
@@ -187,7 +187,7 @@ kokkosp_begin_parallel_for(const char* name, uint32_t devid, uint64_t* kernid)
 {
     if_constexpr(profile_entry_t::size() > 0)
     {
-        auto pname = TIMEMORY_JOIN("/", "kokkos", TIMEMORY_JOIN("", "dev", devid), name);
+        auto pname = TIMEMORY_JOIN('/', "kokkos", TIMEMORY_JOIN("", "dev", devid), name);
         *kernid    = get_unique_id();
         create_profiler(pname, *kernid);
         start_profiler(*kernid, kp_timemory_parallel_for{}, name, devid);
@@ -211,7 +211,7 @@ kokkosp_begin_parallel_reduce(const char* name, uint32_t devid, uint64_t* kernid
 {
     if_constexpr(profile_entry_t::size() > 0)
     {
-        auto pname = TIMEMORY_JOIN("/", "kokkos", TIMEMORY_JOIN("", "dev", devid), name);
+        auto pname = TIMEMORY_JOIN('/', "kokkos", TIMEMORY_JOIN("", "dev", devid), name);
         *kernid    = get_unique_id();
         create_profiler(pname, *kernid);
         start_profiler(*kernid, kp_timemory_parallel_reduce{}, name, devid);
@@ -235,7 +235,7 @@ kokkosp_begin_parallel_scan(const char* name, uint32_t devid, uint64_t* kernid)
 {
     if_constexpr(profile_entry_t::size() > 0)
     {
-        auto pname = TIMEMORY_JOIN("/", "kokkos", TIMEMORY_JOIN("", "dev", devid), name);
+        auto pname = TIMEMORY_JOIN('/', "kokkos", TIMEMORY_JOIN("", "dev", devid), name);
         *kernid    = get_unique_id();
         create_profiler(pname, *kernid);
         start_profiler(*kernid, kp_timemory_parallel_scan{}, name, devid);
@@ -286,7 +286,7 @@ kokkosp_create_profile_section(const char* name, uint32_t* secid)
     {
         *secid = get_unique_id();
         auto pname =
-            TIMEMORY_JOIN("/", "kokkos", TIMEMORY_JOIN("", "section", secid), name);
+            TIMEMORY_JOIN('/', "kokkos", TIMEMORY_JOIN("", "section", secid), name);
         create_profiler(pname, *secid);
     }
 }
