vsettings get + setting config read
- python settings bindings support reading
- timemory_init will read config files
- test settings read in warning_tests
- fixes to throttle-tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -291,6 +291,9 @@ if(TIMEMORY_BUILD_EXAMPLES)
     set(timemory_DIR "${PROJECT_BINARY_DIR}" CACHE STRING
         "timemory build examples directory" FORCE)
     add_subdirectory(examples)
+elseif(TIMEMORY_BUILD_MINIMAL_TESTING AND (TIMEMORY_USE_PYTHON OR TIMEMORY_BUILD_PYTHON))
+    # copies over some python scripts
+    add_subdirectory(examples/ex-python)
 endif()
 
 #----------------------------------------------------------------------------------------#
