Miscellaneous fixes for python + apple + gcc

--- a/source/python/CMakeLists.txt
+++ b/source/python/CMakeLists.txt
@@ -8,19 +8,16 @@
 if(TIMEMORY_BUILD_PYTHON)
     set(CMAKE_CXX_CLANG_TIDY)
     set(CMAKE_UNITY_BUILD OFF)
+    set(CMAKE_VISIBILITY_INLINES_HIDDEN OFF)
     set(CMAKE_INSTALL_DEFAULT_COMPONENT_NAME python)
 
     add_library(timemory-python-compile-options INTERFACE)
     add_library(${PROJECT_NAME}::timemory-python-compile-options ALIAS
         timemory-python-compile-options)
+    add_cxx_flag_if_avail("-frtti" timemory-python-compile-options)
     add_cxx_flag_if_avail("-ftls-model=global-dynamic" timemory-python-compile-options)
     add_cxx_flag_if_avail("-Wno-deprecated-declarations" timemory-python-compile-options)
     add_cxx_flag_if_avail("-Wno-unused-but-set-parameter" timemory-python-compile-options)
-
-    execute_process(COMMAND ${PYTHON_EXECUTABLE}
-        -c "import sys; print('{}'.format(sys.version_info[0]))"
-        OUTPUT_VARIABLE PYTHON_MAJOR_VERSION
-        OUTPUT_STRIP_TRAILING_WHITESPACE)
 
     file(GLOB_RECURSE pybind_headers ${PROJECT_SOURCE_DIR}/external/pybind11/include/*.h)
     file(GLOB pyheaders ${CMAKE_CURRENT_LIST_DIR}/libpytimemory*.hpp)
@@ -34,8 +31,7 @@ if(TIMEMORY_BUILD_PYTHON)
 
     add_library(libpytimemory MODULE ${pysources} ${pyheaders} ${pybind_headers})
     add_library(${PROJECT_NAME}::libpytimemory ALIAS libpytimemory)
-    target_compile_definitions(libpytimemory PRIVATE TIMEMORY_PYBIND11_SOURCE
-        _PYTHON_MAJOR_VERSION=${PYTHON_MAJOR_VERSION})
+    target_compile_definitions(libpytimemory PRIVATE TIMEMORY_PYBIND11_SOURCE)
 
     target_include_directories(libpytimemory SYSTEM PUBLIC
         $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/external/pybind11/include>)
@@ -47,10 +43,10 @@ if(TIMEMORY_BUILD_PYTHON)
         timemory::timemory-cxx-shared
         timemory::timemory-compile-options
         timemory::timemory-external-shared
-        timemory::timemory-python-compile-options
         timemory::timemory-mpip-library
         timemory::timemory-ompt-library
         timemory::timemory-ncclp-library
+        timemory::timemory-python-compile-options
         timemory::timemory-default-visibility)
 
     if(TIMEMORY_USE_CUDA)
