--- a/source/timemory/CMakeLists.txt
+++ b/source/timemory/CMakeLists.txt
@@ -65,16 +65,31 @@ file(GLOB_RECURSE source_files
     ${CMAKE_CURRENT_SOURCE_DIR}/settings/*.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/plotting/*.cpp)
 
-build_intermediate_library(
-    FORCE_OBJECT
-    USE_INTERFACE
-    INSTALL_SOURCE
-    NAME                core
-    TARGET              core
-    CATEGORY            GLOBAL
-    FOLDER              components
-    HEADERS             ${header_files}
-    SOURCES             ${source_files})
+if(TIMEMORY_USE_COVERAGE)
+    build_intermediate_library(
+        # FORCE_OBJECT
+        USE_INTERFACE
+        INSTALL_SOURCE
+        NAME                core
+        TARGET              core
+        CATEGORY            GLOBAL
+        FOLDER              components
+        HEADERS             ${header_files}
+        SOURCES             ${source_files})
+    target_link_libraries(timemory-core-shared PUBLIC
+        timemory-analysis-tools)
+else()
+    build_intermediate_library(
+        FORCE_OBJECT
+        USE_INTERFACE
+        INSTALL_SOURCE
+        NAME                core
+        TARGET              core
+        CATEGORY            GLOBAL
+        FOLDER              components
+        HEADERS             ${header_files}
+        SOURCES             ${source_files})
+endif()
 
 # core
 #add_subdirectory(utility)
