--- a/source/tests/external/CMakeLists.txt
+++ b/source/tests/external/CMakeLists.txt
@@ -11,8 +11,13 @@ endif()
 add_executable(socket-server ${_EXCLUDE} server.cpp)
 add_executable(socket-client ${_EXCLUDE} client.cpp)
 
-target_link_libraries(socket-server PRIVATE timemory::timemory-headers ${_LINK})
-target_link_libraries(socket-client PRIVATE timemory::timemory-headers ${_LINK})
+target_link_libraries(socket-server PRIVATE
+    timemory::timemory-headers ${_LINK}
+    ${_ANALYSIS_TOOLS})
+
+target_link_libraries(socket-client PRIVATE
+    timemory::timemory-headers ${_LINK}
+    ${_ANALYSIS_TOOLS})
 
 add_library(extern-test-templates ${_EXCLUDE} SHARED
     extern_templates.cpp)
@@ -21,7 +26,8 @@ target_link_libraries(extern-test-templates PUBLIC
     timemory::timemory-headers
     timemory::timemory-compile-options
     timemory::timemory-vector
-    timemory::timemory-core)
+    timemory::timemory-core
+    ${_ANALYSIS_TOOLS})
 
 add_library(gotcha-tests-lib ${_EXCLUDE} SHARED
     gotcha_tests_lib.hpp
@@ -30,7 +36,8 @@ add_library(gotcha-tests-lib ${_EXCLUDE} SHARED
 target_link_libraries(gotcha-tests-lib PUBLIC
     timemory::timemory-compile-options
     timemory::timemory-vector
-    timemory::timemory-core)
+    timemory::timemory-core
+    ${_ANALYSIS_TOOLS})
 
 target_include_directories(gotcha-tests-lib PUBLIC
     ${CMAKE_CURRENT_LIST_DIR})
@@ -47,6 +54,7 @@ if(NOT TIMEMORY_SKIP_BUILD AND TIMEMORY_BUILD_C)
         target_link_libraries(custom-record-functions
             timemory::timemory-cxx-shared
             timemory::timemory-c-shared
+            ${_ANALYSIS_TOOLS}
             ${_LINK})
     elseif(BUILD_STATIC_LIBS)
         add_library(custom-record-functions ${_EXCLUDE} STATIC
@@ -54,6 +62,7 @@ if(NOT TIMEMORY_SKIP_BUILD AND TIMEMORY_BUILD_C)
         target_link_libraries(custom-record-functions PUBLIC
             timemory::timemory-cxx-static
             timemory::timemory-c-static
+            ${_ANALYSIS_TOOLS}
             ${_LINK})
     endif()
 endif()
