--- a/.travis.yml
+++ b/.travis.yml
@@ -32,25 +32,25 @@ matrix:
     # GCC 7
     - os: linux
       dist: bionic
-      python: "3.6"
+      python: "3.7"
       addons:
         apt:
+          sources:
+            - ubuntu-toolchain-r-test
           packages:
-            - gcc
-            - g++
+            - gcc-7
+            - g++-7
             - build-essential
-            - libopenmpi-dev
-            - openmpi-bin
-            - openmpi-common
-            - libfabric-dev
+            - libmpich-dev
+            - mpich
             - libpapi-dev
             - papi-tools
-            - lcov
             - graphviz
             - libgoogle-perftools-dev
             - google-perftools
+            - lcov
       env:
-        - MATRIX_EVAL="CC=$(which gcc) && CXX=$(which g++) && BUILD_TYPE=Debug && BUILD_ARGS='--quick --build-libs static --papi --mpi --ompt --kokkos --tools --cxx-standard=14'"
+        - MATRIX_EVAL="CC=$(which gcc-7) && CXX=$(which g++-7) && COVERAGE=1 && BUILD_ARGS='--build-libs shared --mpi --papi --caliper --mpip --python --gotcha --stats --cxx-standard=17'"
     #
     # GCC 8
     - os: linux
@@ -145,25 +145,25 @@ matrix:
     # GCC 7
     - os: linux
       dist: bionic
-      python: "3.7"
+      python: "3.6"
       addons:
         apt:
-          sources:
-            - ubuntu-toolchain-r-test
           packages:
-            - gcc-7
-            - g++-7
+            - gcc
+            - g++
             - build-essential
-            - libmpich-dev
-            - mpich
+            - libopenmpi-dev
+            - openmpi-bin
+            - openmpi-common
+            - libfabric-dev
             - libpapi-dev
             - papi-tools
+            - lcov
             - graphviz
             - libgoogle-perftools-dev
             - google-perftools
-            - lcov
       env:
-        - MATRIX_EVAL="CC=$(which gcc-7) && CXX=$(which g++-7) && COVERAGE=1 && BUILD_ARGS='--build-libs shared --mpi --papi --caliper --mpip --python --gotcha --stats --cxx-standard=17'"
+        - MATRIX_EVAL="CC=$(which gcc) && CXX=$(which g++) && BUILD_TYPE=Debug && BUILD_ARGS='--quick --build-libs static --papi --mpi --ompt --kokkos --tools --cxx-standard=14'"
     #
     # GCC 8
     - os: linux
@@ -203,7 +203,7 @@ matrix:
             - libgoogle-perftools-dev
             - google-perftools
       env:
-        - MATRIX_EVAL="CC=$(which clang-5.0) && CXX=$(which clang++-5.0) && BUILD_ARGS='--build-libs shared --mpi --papi --mpip --ompt --kokkos --stats --tools --cxx-standard=14' && CMAKE_ARGS='-DTIMEMORY_USE_PYTHON=OFF'"
+        - MATRIX_EVAL="CC=$(which clang-5.0) && CXX=$(which clang++-5.0) && PROFILE=1 && BUILD_ARGS='--build-libs shared --gperftools --mpi --papi --mpip --ompt --kokkos --stats --tools --cxx-standard=14' && CMAKE_ARGS='-DTIMEMORY_USE_PYTHON=OFF'"
     # Clang 7
     - os: linux
       dist: bionic
@@ -246,7 +246,8 @@ script:
   - eval "${MATRIX_EVAL}"
   - export ARGS="-SF --pyctest-model=Continuous --pyctest-site=Travis ${BUILD_ARGS}"
   - if [ -z "${BUILD_TYPE}" ]; then BUILD_TYPE=RelWithDebInfo ; fi
-  - if [ -n "${COVERAGE}" ]; then ARGS="${ARGS} --coverage"; else ARGS="${ARGS} --profile=cpu"; fi
+  - if [ -n "${COVERAGE}" ]; then ARGS="${ARGS} --coverage"; fi
+  - if [ -n "${PROFILE}" ]; then ARGS="${ARGS} --profile=cpu"; fi
   - travis_wait 85 python ./pyctest-runner.py -cc ${CC} -cxx ${CXX} ${ARGS} --pyctest-build-type=${BUILD_TYPE} -j 1 -- -V --output-on-failure -- ${CMAKE_ARGS} -DCMAKE_INSTALL_PREFIX=${HOME}/timemory-install
   - cd build-timemory/Linux
   - make install -j
