--- a/source/tools/kokkos-connector/kp_timemory.cpp.in
+++ b/source/tools/kokkos-connector/kp_timemory.cpp.in
@@ -286,7 +286,7 @@ kokkosp_create_profile_section(const char* name, uint32_t* secid)
     {
         *secid = get_unique_id();
         auto pname =
-            TIMEMORY_JOIN('/', "kokkos", TIMEMORY_JOIN("", "section", secid), name);
+            TIMEMORY_JOIN('/', "kokkos", TIMEMORY_JOIN("", "section", *secid), name);
         create_profiler(pname, *secid);
     }
 }
